--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 - WP_VERSION=latest WP_MULTISITE=0
 
 before_script:
-- bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+- bash test/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script:
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
