--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
 - hhvm
 
 env:
-- WP_VERSION=latest WP_MULTISITE=0
+- WP_VERSION=latest WP_MULTISITE=0 TEMP=/tmp
 
 before_script:
 - bash test/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
