--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,24 @@ php:
 env:
 - WP_VERSION=latest WP_MULTISITE=0 TEMP=/tmp
 
-before_script:
-- bash test/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-
-script:
+install:
+# - test/install.sh -c test/settings.travis.cfg 
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-  ]]; then phpunit --coverage-clover=coverage.clover --configuration test/phpunit.xml; else phpunit --configuration test/phpunit.xml; fi
+  ]]; then bash test/install.sh -c test/settings.travis.cfg -l './_output'; else bash test/run.sh -c test/settings.travis.cfg; fi
+  
+before_script:
+  # starting PHP server (PHP 5.4)
+  - php -S 127.0.0.1:4000 &
+  - sleep 3
+  
+script:
+- bash test/install.sh -c test/settings.travis.cfg
+# - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
+  # ]]; then bash test/run.sh -c test/settings.travis.cfg -l './_output'; else bash test/run.sh -c test/settings.travis.cfg; fi
 
 after_script:
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-  ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+  ]]; then wget https://scrutinizer-ci.com/ocular.phar --no-check-certificate; fi
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-  ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover;
+  ]]; then php ocular.phar code-coverage:upload --format=php-clover './_output/coverage.xml';
   fi
