Fixed test WordPress site directory and the project directory paths for Travis CI.

--- a/test/settings.travis.cfg
+++ b/test/settings.travis.cfg
@@ -2,7 +2,7 @@
 # The plugin slug
 PROJECT_SLUG="sample-tdd-plugin"
 # The repository root directory. Leave it empty to automatically set. '../' will be set in that case.
-PROJECT_DIR="../"
+PROJECT_DIR="./"
 
 # Database Settings
 DB_NAME="sample-tdd-plugin-test"
@@ -12,7 +12,7 @@ DB_HOST="127.0.0.1"
 WP_VERSION="latest"
 
 # Site Settings
-WP_TEST_DIR="../"
+WP_TEST_DIR="./"
 WP_URL="http://127.0.0.1/test-sample-tdd-plugin"
 WP_ADMIN_USER_NAME="admin"
 WP_ADMIN_PASSWORD="admin"
