--- a/test/settings.travis.cfg
+++ b/test/settings.travis.cfg
@@ -12,7 +12,7 @@ DB_HOST="127.0.0.1"
 WP_VERSION="latest"
 
 # Site Settings
-WP_TEST_DIR="./"
+WP_TEST_DIR="./test-sample-tdd-plugin"
 WP_URL="http://127.0.0.1/test-sample-tdd-plugin"
 WP_ADMIN_USER_NAME="admin"
 WP_ADMIN_PASSWORD="admin"
