Added a port to the local site url.

--- a/test/settings.travis.cfg
+++ b/test/settings.travis.cfg
@@ -13,7 +13,7 @@ WP_VERSION="latest"
 
 # Site Settings
 WP_TEST_DIR="./test-sample-tdd-plugin"
-WP_URL="http://127.0.0.1/test-sample-tdd-plugin/"
+WP_URL="http://127.0.0.1:4000/test-sample-tdd-plugin/"
 WP_ADMIN_USER_NAME="admin"
 WP_ADMIN_PASSWORD="admin"
 WP_ADMIN_EMAIL="wpplugins@michaeluno.jp"
