--- a/test/settings-sample.cfg
+++ b/test/settings-sample.cfg
@@ -1,17 +1,26 @@
 # Script settings 
-PROJECT_SLUG="admin-page-framework"
+PROJECT_SLUG="sample-tdd-plugin"
+
+# The repository root directory. Leave it empty to automatically set. '../' will be set in that case.
+PROJECT_DIR=""
 
 # Database settings
-DB_NAME="admin-page-framework-test"
+DB_NAME="sample-tdd-plugin-test"
 DB_USER="root"
 DB_PASS="root"
 DB_HOST="localhost"
 WP_VERSION="latest"
 
 # Site settings
-WP_TEST_DIR="/test_wp/test-admin-page-framework"
-WP_URL="http://localhost/test_wp/test-admin-page-framework"
+WP_TEST_DIR="/test_wp/test-sample-tdd=plugin"
+WP_URL="http://localhost/test_wp/test-sample-tdd=plugin"
 WP_ADMIN_USER_NAME="admin"
 WP_ADMIN_PASSWORD="admin"
-WP_ADMIN_EMAIL="admin-page-framework@michaeluno.jp"
-WP_SITE_TITLE="Testing Admin Page Framework"
+WP_ADMIN_EMAIL="wpplugins@michaeluno.jp"
+WP_SITE_TITLE="Testing Sample TDD Plugin"
+
+# Codeception Settings
+ENABLE_COVERAGE="false"
+# this will be relavite to the codeception test directory path 
+COVERAGE_LOG_DIR_PATH="./_output"
+TESTER_CLASS_PREFIX="SampleTDDPlugin_"
