Fixed the coverage path on Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ script:
 
 after_script:
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-  ]]; then wget https://scrutinizer-ci.com/ocular.phar --no-check-certificate; fi
+  ]]; then wget https://scrutinizer-ci.com/ocular.phar --no-check-certificate; 
+  fi
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-  ]]; then php ocular.phar code-coverage:upload --format=php-clover './_output/coverage.xml';
+  ]]; then php ocular.phar code-coverage:upload --format=php-clover 'coverage.xml';
   fi
