Fixed a syntax error in the bash script on Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ after_script:
   fi
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
   ]]; then php ocular.phar code-coverage:upload --format=php-clover 'coverage.xml';
-  php test/coverage-checker.php 'coverage.xml' 80
+  php test/coverage-checker.php 'coverage.xml' 80;
   fi
