--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,23 @@ language: php
 sudo: false
 
 php:
-# Temporarily disabling testing different PHP versions for testing Travis CI.
-# - 5.3
-# - 5.4
+- 5.3
+- 5.4
 - 5.5
-# - 5.6
-# - hhvm
+- 5.6
+- hhvm
 
 env:
 - WP_VERSION=latest WP_MULTISITE=0 TEMP=/tmp
 
 install:
 - bash test/install.sh -c test/settings.travis.cfg 
-#- if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-#  ]]; then bash test/install.sh -c test/settings.travis.cfg; else bash test/install.sh -c test/settings.travis.cfg; fi
-  
+
 before_script:
-  # starting PHP server (PHP 5.4)
   - php -S 127.0.0.1:4000 &
   - sleep 3
   
 script:
-# - bash test/run.sh -c test/settings.travis.cfg
 - if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
   ]]; then bash test/run.sh -c test/settings.travis.cfg -l 'coverage.xml'; else bash test/run.sh -c test/settings.travis.cfg; fi
 
