--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
 matrix:
     include:
         - php: 5.4
-          env: WP_VERSION=latest WP_MULTISITE=1
+          env: WP_VERSION=latest WP_MULTISITE=1 TEMP=/tmp
 
 install:
     - bash test/install.sh -c test/settings.travis.cfg 
