- Made it possible to set desired plugins to install and activate from the setting file. - Made wget run quitly.

--- a/test/settings-sample.cfg
+++ b/test/settings-sample.cfg
@@ -19,5 +19,9 @@ WP_ADMIN_PASSWORD="admin"
 WP_ADMIN_EMAIL="wpplugins@michaeluno.jp"
 WP_SITE_TITLE="Testing Sample TDD Plugin"
 
-# Codeception Settings
-TESTER_CLASS_PREFIX="SampleTDDPlugin_"
+# Installing plugin slug hosted on wordperss.org, the path to a local zip file, or URL to a remote zip file.
+INSTALL_PLUGINS[0]="http://downloads.wordpress.org/plugin/admin-page-framework.latest-stable.zip"
+    # INSTALL_PLUGINS[1]='...' // add more like so
+    
+# Overriding Environment Variable
+# WP_MULTISITE=0
