--- a/test/settings.travis.cfg
+++ b/test/settings.travis.cfg
@@ -18,3 +18,10 @@ WP_ADMIN_USER_NAME="admin"
 WP_ADMIN_PASSWORD="admin"
 WP_ADMIN_EMAIL="wpplugins@michaeluno.jp"
 WP_SITE_TITLE="Testing Sample TDD Plugin"
+
+# Installing plugin slug hosted on wordperss.org, the path to a local zip file, or URL to a remote zip file.
+INSTALL_PLUGINS[0]="http://downloads.wordpress.org/plugin/admin-page-framework.latest-stable.zip"
+    # INSTALL_PLUGINS[1]='...' // add more like so
+    
+# Overriding Environment Variable
+# WP_MULTISITE=0
